Carga de Graphics.AO, si no existe, carga los files descomprimidos.

--- a/Codigo/clsTexManager.cls
+++ b/Codigo/clsTexManager.cls
@@ -143,12 +143,10 @@ Private Function CrearGrafico(ByVal Archivo As Integer, _
     On Error GoTo ErrHandler
 
     Dim surface_desc As D3DSURFACE_DESC
-
     Dim texture_info As D3DXIMAGE_INFO
-
+    
     Dim index        As Integer
-
-    index = Archivo Mod HASH_TABLE_SIZE
+        index = Archivo Mod HASH_TABLE_SIZE
 
     Dim ArchivoGrafico As String
     
@@ -166,17 +164,35 @@ Private Function CrearGrafico(ByVal Archivo As Integer, _
             'Ultimo acceso
             .UltimoAcceso = GetTickCount
             
-            ArchivoGrafico = App.Path & "\Recursos\Graficos\" & .FileName
+            'Si existe Graphics.AO, lo cargamos.
+            If FileExist(App.Path & "\Recursos\Graficos\Graphics.AO", vbNormal) Then
+                
+                Dim Buffer() As Byte
+                
+                'Obtenemos el .bmp del archivo en Graphics.AO
+                Call modCompression.Get_Image(App.Path & "\Recursos\Graficos\", CStr(Archivo), Buffer())
+                
+                'Seteamos la textura.
+                Set .Texture = D3DX.CreateTextureFromFileInMemoryEx(D3DDevice, Buffer(0), UBound(Buffer()) + 1, D3DX_DEFAULT, D3DX_DEFAULT, 0, 0, D3DFMT_A8R8G8B8, _
+                                                                    D3DPOOL_MANAGED, D3DX_FILTER_POINT, D3DX_FILTER_NONE, &HFF000000, texture_info, ByVal 0)
+                Erase Buffer
+                
+            Else 'Si no existe (Graphics.AO), cargamos los .PNG's o .BMP's descompromodos en la carpeta "\Recursos\Graficos\"
             
-            If FileExist(ArchivoGrafico & ".png", vbNormal) Then
-                ArchivoGrafico = ArchivoGrafico & ".png"
-            Else
-                ArchivoGrafico = ArchivoGrafico & ".bmp"
-
+                ArchivoGrafico = App.Path & "\Recursos\Graficos\" & .FileName
+                
+                If FileExist(ArchivoGrafico & ".png", vbNormal) Then
+                    ArchivoGrafico = ArchivoGrafico & ".png"
+                Else
+                    ArchivoGrafico = ArchivoGrafico & ".bmp"
+    
+                End If
+                
+                Set .Texture = D3DX.CreateTextureFromFileEx(D3DDevice, ArchivoGrafico, D3DX_DEFAULT, D3DX_DEFAULT, 0, 0, D3DFMT_A8R8G8B8, _
+                                                            D3DPOOL_MANAGED, D3DX_FILTER_NONE, D3DX_FILTER_NONE, &HFF000000, texture_info, ByVal 0)
+              
             End If
-            
-            Set .Texture = D3DX.CreateTextureFromFileEx(D3DDevice, ArchivoGrafico, D3DX_DEFAULT, D3DX_DEFAULT, 0, 0, D3DFMT_A8R8G8B8, D3DPOOL_MANAGED, D3DX_FILTER_NONE, D3DX_FILTER_NONE, &HFF000000, texture_info, ByVal 0)
-               
+              
             Call .Texture.GetLevelDesc(0, surface_desc)
             
             .texture_width = texture_info.Width
